# saweria-webhook

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  handlers.rs  main.rs  models.rs
